--- a/src/Pages/Home/Slider/Slider.css
+++ b/src/Pages/Home/Slider/Slider.css
@@ -24,7 +24,7 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /* background: #fff; */
   
     /* Center slide text vertically */
     display: flex;
@@ -50,7 +50,7 @@
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    color: var(--swiper-theme-color);
+    color: #00BCD4;
   }
   
   .autoplay-progress svg {
@@ -62,10 +62,30 @@
     width: 100%;
     height: 100%;
     stroke-width: 4px;
-    stroke: var(--swiper-theme-color);
+    stroke: #00BCD4;
     fill: none;
     stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
     stroke-dasharray: 125.6;
     transform: rotate(-90deg);
   }
-  
+  .swiper-button-next, .swiper-button-prev{
+    color: #00BCD4;
+  }
+
+  .custom-bg-banner {
+    background-image: url('https://i.ibb.co/qRvMdrV/pexels-vlad-vasnetsov-2202685.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+  }
+
+  .custom-bg-banner::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Change the last value (0.5) to adjust opacity */
+  }
